--- a/template/package.json.template
+++ b/template/package.json.template
@@ -27,6 +27,8 @@
     "@types/chai": "^4.0.1",
     "@types/js-base64": "^2.3.0",
     "@types/jsonwebtoken": "^7.2.3",
+    "@types/koa": "^2.0.44",
+    "@types/koa-router": "^7.0.27",
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.5.7",
     "chai": "^4.1.0",
